--- a/File/main.tex
+++ b/File/main.tex
@@ -128,12 +128,11 @@
 % ---------- LAB INCLUSIONS ----------
 \include{Lab1/Lab_1}
 \include{Lab2/Lab_2}
-% \include{Lab3/Lab_3}
-% \include{Lab4/Lab_4}
-% \include{Lab4_1/Lab_4_1}
-% \include{Lab5/Lab_5}
-% \include{Lab6/Lab_6}
-% \include{Lab7/Lab_7}
+\include{Lab3/Lab_3}
+\include{Lab4/Lab_4}
+\include{Lab5/Lab_5}
+\include{Lab6/Lab_6}
+\include{Lab7/Lab_7}
 % \include{Lab8/Lab_8}
 \clearpage
 % \bibliographystyle{plainnat}
